--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,13 @@ Please see the CHANGES file for a more detailed list of specific bugs/patches
 that have been fixed/applied, and the ChangeLog file for a comprehensive
 listing of all changes made to the code.
 
+*5.7.1*
+
+  libnetsnmp:
+      - Fixed the mib-parsing-bug introduced shortly before 5.7
+
+  Many other miscellaneous bug fixes
+
 *5.7*
 
   snmpd:
