--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,99 @@ a summary of the major changes, and the ChangeLog file for a comprehensive
 listing of all changes made to the code.
 
 
+*5.5.2*
+
+    snmplib:
+      - [PATCH 2835577]: Replace SNMP_ZERO of arrays with a memset.
+      - [PATCH 3183000]: Fix calculation of common OID prefix length
+      - Avoid unnecessary casts when using netsnmp_set_row_column()
+      - Declare "type" argument of se_store_xxx() as const
+      - Make it explicit that MAX_SUBID is an unsigned constant
+      - Prevent gcc ped-warning for NETSNMP_REMOVE_CONST
+      - Simplify implementation of functions manipulating 64-bit numbers.
+      - Simplify the se_store_enum_list() implementation
+
+    snmpd:
+      - [BUG 3439234]: Correct dependencies of ucd-snmp/{pass,pass_persist}
+      - [BUG 3439234]: Move netsnmp_pass_str_to_errno to pass_common
+      - [BUG 3440752]: Report speed correctly for unusual E'net interfaces
+      - [BUG 3463767]: Handle parsing subidentifiers > 2^31
+      - [PATCH 3175640]: Use IP_RECVDSTADDR sockopt where available (*BSD)
+      - [PATCH 3198781]: Fix compilation of disman/{ping,traceroute} modules
+      - [PATCH 3402376]: Recognise ReiserFS systems
+      - [PATCH 3410050]: Skip already-'processed' varbinds
+      - [PATCH 3410059]: Fix sparsely augmenting trigger tables
+      - [PATCH 3447444]: Fix SIG_PIPE handling
+      - [PATCH 3447671]: Fix override handling of OID values
+      - [PATCH 3453868]: Factor common code into pass_common
+      - [PATCH 3487919]: Fix compilation when caching is disabled
+      - Added OCFS2 (Oracle Cluster FS) to hrStorageTable and hrFSTable
+      - DISMAN-SCHEDULER-MIB: Handle 32-char contextName values correctly.
+      - IF-MIB::ifType: Report InfiniBand interfaces correctly
+      - Eliminate various dead variables
+      - Return error instead of exiting on init problems
+      - Make the configuration of the dlmod module fail rather than
+	generate a dummy module if the dlopen function isn't available.
+      - Smux: simplify smux_list_detach()
+
+    snmpdx:
+      - [PATCH 3445437]: Log AgentX disconnections (in line with connections)
+
+    snmptrapd:
+      - Add missing newline character in a log message
+      - Avoid crash during shutdown due to invoking perl_destruct(NULL)
+      - Invoke shutdown_perl() when shutting down
+      - Don't invoke shutdown_perl() from SIGTERM handler
+      - Handle changes to libmysqlclient API (affects Fedora 15/16)
+
+    apps :
+      - [PATCH 2835577]: Replace SNMP_ZERO of arrays with a memset.
+
+    mib2c:
+      - [PATCH 3211484]: Support enumerations in notification varbinds
+
+    perl:
+      - Eliminate various dead variables
+      - Fix spelling in the documentation of the SNMP module
+      - Fixed segmentation fault when handler registration fails.
+      - Make sure constant SNMP_DEFAULT_RETRIES is recognized
+      - Add constants NETSNMP_CALLBACK_OP_{RECEIVED_MESSAGE,TIMED_OUT}
+
+    python:
+      - [PATCH 3185085]: Fix segfault on 64-bit systems
+
+    Build/install:
+      - Install util_funcs subheaders
+
+    man:
+      - [BUG 3190725]: Document snmp{,_sess}synch_response & snmp_async_send
+
+    testing:
+      - Fix Perl regression test failures
+      - Don't fail skipped Perl tests.
+
+    BSD:
+      - PATCH 3383965: Fix if-mib agent compile warnings on *BSD
+
+    MinGW:
+      - Avoid "pragma comment" warnings in <net-snmp/net-snmp-config.h>
+      - Header file <net-snmp/net-snmp-config.h> now usable with MinGW
+      - Made regression test output independent of Windows registry settings
+
+    Windows:
+      - Avoid problems if Net-SNMP Perl modules are built with a different
+        version of Microsoft Visual Studio than that used for ActivePerl
+      - Avoid problems with PACKAGE_* macros, when using GNU autotools
+      - Now builds correctly with a 64-bit compiler
+      - build.bat: Generate PDB files in release mode
+      - build.bat: Install netsnmp.dll before running Perl regression tests
+      - Make linking with recent OpenSSL binaries succeed.
+      - Make netsnmp_large_fd_set_resize() robust against memalloc failures.
+      - Perl modules build now with IPv6 enabled.
+      - Snmpd: Remove dlmod
+      - Snmptrapd: Make the IP address to hostname conversion work
+
+
 *5.5.1*
 
     snmplib:
