--- a/NEWS
+++ b/NEWS
@@ -3,16 +3,25 @@ Please see the CHANGES file for a more detailed list of specific bugs/patches
 that have been fixed/applied, and the ChangeLog file for a comprehensive
 listing of all changes made to the code.
 
+*5.6.2*
+
+    snmpd:
+      - [PATCH 3198781]: Fix compilation of disman/{ping,traceroute} modules
+      - [BUG 3166568]:   Fix missing hrSystemProcesses values
+
+    building:
+      - [PATCH 2091156]: Fix parallel builds (using 'make -j <N>')
+
 *5.6.1*
+
     General:
       - The DTLS and TLS transports and the TSM security model are no
         longer "beta" (they've undergone rigorous interoperability testing).
       - Many Bug Fixes (see the CHANGES and ChangeLog files for full details)
 
     snmpd:
-      - Patch 3141462: from fenner: fix agentx subagent issues with
-	multiple-object requests
-      - Patch from Niels to fix VACM persistant storage.
+      - [PATCH 3141462]: Fix multi-opbject AgentX subagent requests
+      - Fix VACM persistant storage.
 
 *5.6*
 
