--- a/CHANGES
+++ b/CHANGES
@@ -3,10 +3,12 @@ that have been applied in released versions.  Please see the NEWS file for
 a summary of the major changes, and the ChangeLog file for a comprehensive
 listing of all changes made to the code.
 
+
 *5.6.2*
 
     snmplib:
       - [PATCH 2835577]: Replace SNMP_ZERO of arrays with a memset.
+      - [PATCH 3510454]: Allow the use of 0.0.0.0/0 as alias for default
       - [BUG 3134323]: Fix crash when comparing invalid OIDs
       - Avoid unnecessary casts when using netsnmp_set_row_column()
       - Eliminate assorted dead variables
@@ -14,7 +16,9 @@ listing of all changes made to the code.
     snmpd:
       - [PATCH 2941811]: Handle successful requests with reqID 0
       - [PATCH 3096725]: sysORTable registation for notification log mib
+      - [PATCH 3487867]: Don't skip missing ifXTable entries (ifConnectorPresent FALSE)
       - [PATCH 3487919]: Fix compilation when caching is disabled
+      - [PATCH 3495697]: Store persistent snmpTarget table changes
       - Added OCFS2 (Oracle Cluster FS) to hrStorageTable and hrFSTable
       - Eliminate assorted dead variables
       - UDP-MIB: Report proper udpLocalAddress (instead of 0.0.0.0)
@@ -68,6 +72,7 @@ listing of all changes made to the code.
       - Fix get_uptime() / hrSystemUptime implementation
 
     FreeBSD:
+      - [PATCH 3489387]: Install FreeBSD 10 header file (plus other missing versions)
       - Restore IP_RECVDSTADDR functionality.
 
     Linux:
