--- a/man/netsnmp_access_multiplexer.3
+++ b/man/netsnmp_access_multiplexer.3
@@ -1,4 +1,4 @@
-.TH "baby_steps_access_multiplexer: calls individual access methods based on baby_step mode." 3 "Fri Mar 18 2011" "Version 5.5.1" "net-snmp" \" -*- nroff -*-
+.TH "baby_steps_access_multiplexer: calls individual access methods based on baby_step mode." 3 "Mon May 7 2012" "Version 5.5.2.rc1" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
