--- a/man/netsnmp_agent_registry.3
+++ b/man/netsnmp_agent_registry.3
@@ -1,4 +1,4 @@
-.TH "Maintain a registry of MIB subtrees, together with related information regarding mibmodule, sessions, etc" 3 "Fri Mar 18 2011" "Version 5.5.1" "net-snmp" \" -*- nroff -*-
+.TH "Maintain a registry of MIB subtrees, together with related information regarding mibmodule, sessions, etc" 3 "Mon May 7 2012" "Version 5.5.2.rc1" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -226,7 +226,7 @@ checks to see if everything within a given subtree is either: in view, not in vi
 .PP
 
 .PP
-Definition at line 1474 of file agent_registry.c.
+Definition at line 1475 of file agent_registry.c.
 .SS "int netsnmp_get_lookup_cache_size (void)"
 .PP
 retrieves the current value of the lookup cache size \fBReturns:\fP
@@ -272,7 +272,7 @@ Unregisters an OID that has an associated context name value. Typically used whe
 .PP
 
 .PP
-Definition at line 1120 of file agent_registry.c.
+Definition at line 1121 of file agent_registry.c.
 .SH "Author"
 .PP 
 Generated automatically by Doxygen for net-snmp from the source code.
