--- a/man/netsnmp_mib_utilities.3
+++ b/man/netsnmp_mib_utilities.3
@@ -1,4 +1,4 @@
-.TH "mib parsing and datatype manipulation routines." 3 "Fri Mar 18 2011" "Version 5.5.1" "net-snmp" \" -*- nroff -*-
+.TH "mib parsing and datatype manipulation routines." 3 "Mon May 7 2012" "Version 5.5.2.rc1" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -437,7 +437,7 @@ Definition at line 292 of file mib.c.
 .PP
 xxx-rks: should free previous value? 
 .PP
-Definition at line 3740 of file mib.c.
+Definition at line 3731 of file mib.c.
 .SS "int build_oid_segment (\fBnetsnmp_variable_list\fP *var)"
 .PP
 Takes the value in VAR and turns it into an OID segment in var->name. \fBParameters:\fP
@@ -452,7 +452,7 @@ SNMPERR_SUCCESS or SNMPERR_GENERR
 .PP
 
 .PP
-Definition at line 3606 of file mib.c.
+Definition at line 3597 of file mib.c.
 .SS "void fprint_description (FILE *f, oid *objid, size_tobjidlen, intwidth)"
 .PP
 Prints on oid description into a file descriptor. \fBParameters:\fP
@@ -468,7 +468,7 @@ Prints on oid description into a file descriptor. \fBParameters:\fP
 .PP
 
 .PP
-Definition at line 4610 of file mib.c.
+Definition at line 4601 of file mib.c.
 .SS "void fprint_objid (FILE *f, const oid *objid, size_tobjidlen)"
 .PP
 Prints an oid to a file descriptor. \fBParameters:\fP
@@ -482,7 +482,7 @@ Prints an oid to a file descriptor. \fBParameters:\fP
 .PP
 
 .PP
-Definition at line 3329 of file mib.c.
+Definition at line 3320 of file mib.c.
 .SS "void fprint_variable (FILE *f, const oid *objid, size_tobjidlen, const \fBnetsnmp_variable_list\fP *variable)"
 .PP
 Prints a variable to a file descriptor. \fBParameters:\fP
@@ -498,7 +498,7 @@ Prints a variable to a file descriptor. \fBParameters:\fP
 .PP
 
 .PP
-Definition at line 3483 of file mib.c.
+Definition at line 3474 of file mib.c.
 .SS "struct \fBtree\fP* get_tree_head (void)\fC [read]\fP"
 .PP
 Retrieves the tree head. \fBReturns:\fP
@@ -508,7 +508,7 @@ the tree head.
 .PP
 
 .PP
-Definition at line 2038 of file mib.c.
+Definition at line 2031 of file mib.c.
 .SS "int get_wild_node (const char *name, oid *objid, size_t *objidlen)"\fBSee also:\fP
 .RS 4
 comments on find_best_tree_node for usage after first time. 
@@ -516,26 +516,26 @@ comments on find_best_tree_node for usage after first time.
 .PP
 
 .PP
-Definition at line 5649 of file mib.c.
+Definition at line 5639 of file mib.c.
 .SS "void netsnmp_fixup_mib_directory (void)"
 .PP
 swap in the new value and repeat 
 .PP
-Definition at line 2503 of file mib.c.
+Definition at line 2496 of file mib.c.
 .SS "char* netsnmp_get_mib_directory (void)"
 .PP
 Check if the environment variable is set
 .PP
 Not set use hard coded path 
 .PP
-Definition at line 2456 of file mib.c.
+Definition at line 2449 of file mib.c.
 .SS "void netsnmp_init_mib (void)"
 .PP
 Initialises the mib reader. Library API routines concerned with MIB files and objects, and OIDs.
 .PP
 Reads in all settings from the environment. 
 .PP
-Definition at line 2550 of file mib.c.
+Definition at line 2543 of file mib.c.
 .SS "int netsnmp_oid2chars (char *C, intL, const oid *O)"
 .PP
 Converts an OID to its character form. in example 5 . 1 . 2 . 3 . 4 . 5 = 12345
@@ -558,7 +558,7 @@ Converts an OID to its character form. in example 5 . 1 . 2 . 3 . 4 . 5 = 12345
 .PP
 length 
 .PP
-Definition at line 6436 of file mib.c.
+Definition at line 6425 of file mib.c.
 .SS "int netsnmp_oid2str (char *S, intL, oid *O)"
 .PP
 Converts an OID to its string form. in example 5 . 'h' . 'e' . 'l' . 'l' . 'o' = 'hello\\0' (null terminated)
@@ -579,7 +579,7 @@ Converts an OID to its string form. in example 5 . 'h' . 'e' . 'l' . 'l' . 'o' =
 .PP
 
 .PP
-Definition at line 6464 of file mib.c.
+Definition at line 6453 of file mib.c.
 .SS "void netsnmp_set_mib_directory (const char *dir)"
 .PP
 New dir starts with '+', thus we add it.
@@ -588,7 +588,7 @@ If dir starts with '+' skip '+' it.
 .PP
 set_string calls strdup, so if we allocated memory, free it 
 .PP
-Definition at line 2401 of file mib.c.
+Definition at line 2394 of file mib.c.
 .SS "int netsnmp_str2oid (const char *S, oid *O, intL)"
 .PP
 Converts a string to its OID form. in example 'hello' = 5 . 'h' . 'e' . 'l' . 'l' . 'o'
@@ -609,7 +609,7 @@ Converts a string to its OID form. in example 'hello' = 5 . 'h' . 'e' . 'l' . 'l
 .PP
 
 .PP
-Definition at line 6401 of file mib.c.
+Definition at line 6390 of file mib.c.
 .SS "void print_description (oid *objid, size_tobjidlen, intwidth)"
 .PP
 Prints on oid description on stdout. \fBSee also:\fP
@@ -619,7 +619,7 @@ Prints on oid description on stdout. \fBSee also:\fP
 .PP
 
 .PP
-Definition at line 4594 of file mib.c.
+Definition at line 4585 of file mib.c.
 .SS "void print_mib (FILE *fp)"
 .PP
 Prints the MIBs to the file fp. \fBParameters:\fP
@@ -629,7 +629,7 @@ Prints the MIBs to the file fp. \fBParameters:\fP
 .PP
 
 .PP
-Definition at line 2907 of file mib.c.
+Definition at line 2901 of file mib.c.
 .SS "void print_objid (const oid *objid, size_tobjidlen)"
 .PP
 Prints an oid to stdout. \fBParameters:\fP
@@ -641,7 +641,7 @@ Prints an oid to stdout. \fBParameters:\fP
 .PP
 
 .PP
-Definition at line 3315 of file mib.c.
+Definition at line 3306 of file mib.c.
 .SS "void print_variable (const oid *objid, size_tobjidlen, const \fBnetsnmp_variable_list\fP *variable)"
 .PP
 Prints a variable to stdout. \fBParameters:\fP
@@ -655,7 +655,7 @@ Prints a variable to stdout. \fBParameters:\fP
 .PP
 
 .PP
-Definition at line 3467 of file mib.c.
+Definition at line 3458 of file mib.c.
 .SS "int read_objid (const char *input, oid *output, size_t *out_len)"
 .PP
 Reads an object identifier from an input string into internal OID form. When called, out_len must hold the maximum length of the output array.
@@ -676,7 +676,7 @@ Reads an object identifier from an input string into internal OID form. When cal
 .PP
 If an error occurs, this function returns 0 and MAY set snmp_errno. snmp_errno is NOT set if SET_SNMP_ERROR evaluates to nothing. This can make multi-threaded use a tiny bit more robust. 
 .PP
-Definition at line 3005 of file mib.c.
+Definition at line 2999 of file mib.c.
 .SS "void set_function (struct \fBtree\fP *subtree)"
 .PP
 Set's the printing function printomat in a subtree according it's type. \fBParameters:\fP
@@ -686,12 +686,12 @@ Set's the printing function printomat in a subtree according it's type. \fBParam
 .PP
 
 .PP
-Definition at line 2928 of file mib.c.
+Definition at line 2922 of file mib.c.
 .SS "void shutdown_mib (void)"
 .PP
 Unloads all mibs. 
 .PP
-Definition at line 2873 of file mib.c.
+Definition at line 2867 of file mib.c.
 .SS "void snmp_in_toggle_options_usage (const char *lead, FILE *outf)"
 .PP
 Prints out a help usage for the in* toggle options. \fBParameters:\fP
@@ -703,7 +703,7 @@ Prints out a help usage for the in* toggle options. \fBParameters:\fP
 .PP
 
 .PP
-Definition at line 2311 of file mib.c.
+Definition at line 2304 of file mib.c.
 .SS "oid* snmp_parse_oid (const char *argv, oid *root, size_t *rootlen)"
 .PP
 Given a string, parses an oid out of it (if possible). It will try to parse it based on predetermined configuration if present or by every method possible otherwise. If a suffix has been registered using NETSNMP_DS_LIB_OIDSUFFIX, it will be appended to the input string before processing.
@@ -724,7 +724,7 @@ The root oid pointer if successful, or NULL otherwise.
 .PP
 
 .PP
-Definition at line 6007 of file mib.c.
+Definition at line 5996 of file mib.c.
 .SS "int sprint_realloc_asciistring (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, const u_char *cp, size_tlen)"
 .PP
 Prints an ascii string into a buffer. The characters pointed by *cp are encoded as an ascii string.
@@ -784,7 +784,7 @@ Fallback routine for a bad type, prints 'Variable has bad type' into a buffer. I
 .PP
 
 .PP
-Definition at line 1923 of file mib.c.
+Definition at line 1916 of file mib.c.
 .SS "int sprint_realloc_bitstring (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, const \fBnetsnmp_variable_list\fP *var, const struct \fBenum_list\fP *enums, const char *hint, const char *units)"
 .PP
 Prints a bit string into a buffer. If allow_realloc is true the buffer will be (re)allocated to fit in the needed size. (Note: *buf may change due to this.)
@@ -815,7 +815,7 @@ Prints a bit string into a buffer. If allow_realloc is true the buffer will be (
 .PP
 
 .PP
-Definition at line 1784 of file mib.c.
+Definition at line 1777 of file mib.c.
 .SS "int sprint_realloc_by_type (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, const \fBnetsnmp_variable_list\fP *var, const struct \fBenum_list\fP *enums, const char *hint, const char *units)"
 .PP
 Universal print routine, prints a variable into a buffer according to the variable type. If allow_realloc is true the buffer will be (re)allocated to fit in the needed size. (Note: *buf may change due to this.)
@@ -846,7 +846,7 @@ Universal print routine, prints a variable into a buffer according to the variab
 .PP
 
 .PP
-Definition at line 1958 of file mib.c.
+Definition at line 1951 of file mib.c.
 .SS "int sprint_realloc_counter (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, const \fBnetsnmp_variable_list\fP *var, const struct \fBenum_list\fP *enums, const char *hint, const char *units)"
 .PP
 Prints a counter value into a buffer. If allow_realloc is true the buffer will be (re)allocated to fit in the needed size. (Note: *buf may change due to this.)
@@ -877,7 +877,7 @@ Prints a counter value into a buffer. If allow_realloc is true the buffer will b
 .PP
 
 .PP
-Definition at line 1551 of file mib.c.
+Definition at line 1544 of file mib.c.
 .SS "int sprint_realloc_counter64 (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, const \fBnetsnmp_variable_list\fP *var, const struct \fBenum_list\fP *enums, const char *hint, const char *units)"
 .PP
 Prints a counter into a buffer. The variable var is encoded as a counter value.
@@ -910,7 +910,7 @@ If allow_realloc is true the buffer will be (re)allocated to fit in the needed s
 .PP
 
 .PP
-Definition at line 867 of file mib.c.
+Definition at line 860 of file mib.c.
 .SS "int sprint_realloc_gauge (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, const \fBnetsnmp_variable_list\fP *var, const struct \fBenum_list\fP *enums, const char *hint, const char *units)"
 .PP
 Prints a gauge value into a buffer. If allow_realloc is true the buffer will be (re)allocated to fit in the needed size. (Note: *buf may change due to this.)
@@ -941,7 +941,7 @@ Prints a gauge value into a buffer. If allow_realloc is true the buffer will be 
 .PP
 
 .PP
-Definition at line 1478 of file mib.c.
+Definition at line 1471 of file mib.c.
 .SS "int sprint_realloc_hinted_integer (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, longval, const chardecimaltype, const char *hint, const char *units)"
 .PP
 Prints an integer according to the hint into a buffer. If allow_realloc is true the buffer will be (re)allocated to fit in the needed size. (Note: *buf may change due to this.)
@@ -972,7 +972,7 @@ Prints an integer according to the hint into a buffer. If allow_realloc is true 
 .PP
 
 .PP
-Definition at line 1204 of file mib.c.
+Definition at line 1197 of file mib.c.
 .SS "int sprint_realloc_integer (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, const \fBnetsnmp_variable_list\fP *var, const struct \fBenum_list\fP *enums, const char *hint, const char *units)"
 .PP
 Prints an integer into a buffer. If allow_realloc is true the buffer will be (re)allocated to fit in the needed size. (Note: *buf may change due to this.)
@@ -1003,7 +1003,7 @@ Prints an integer into a buffer. If allow_realloc is true the buffer will be (re
 .PP
 
 .PP
-Definition at line 1278 of file mib.c.
+Definition at line 1271 of file mib.c.
 .SS "int sprint_realloc_ipaddress (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, const \fBnetsnmp_variable_list\fP *var, const struct \fBenum_list\fP *enums, const char *hint, const char *units)"
 .PP
 Prints an ip-address into a buffer. If allow_realloc is true the buffer will be (re)allocated to fit in the needed size. (Note: *buf may change due to this.)
@@ -1034,7 +1034,7 @@ Prints an ip-address into a buffer. If allow_realloc is true the buffer will be 
 .PP
 
 .PP
-Definition at line 1680 of file mib.c.
+Definition at line 1673 of file mib.c.
 .SS "int sprint_realloc_networkaddress (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, const \fBnetsnmp_variable_list\fP *var, const struct \fBenum_list\fP *enums, const char *hint, const char *units)"
 .PP
 Prints a network address into a buffer. If allow_realloc is true the buffer will be (re)allocated to fit in the needed size. (Note: *buf may change due to this.)
@@ -1065,7 +1065,7 @@ Prints a network address into a buffer. If allow_realloc is true the buffer will
 .PP
 
 .PP
-Definition at line 1614 of file mib.c.
+Definition at line 1607 of file mib.c.
 .SS "int sprint_realloc_null (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, const \fBnetsnmp_variable_list\fP *var, const struct \fBenum_list\fP *enums, const char *hint, const char *units)"
 .PP
 Prints a null value into a buffer. If allow_realloc is true the buffer will be (re)allocated to fit in the needed size. (Note: *buf may change due to this.)
@@ -1096,7 +1096,7 @@ Prints a null value into a buffer. If allow_realloc is true the buffer will be (
 .PP
 
 .PP
-Definition at line 1740 of file mib.c.
+Definition at line 1733 of file mib.c.
 .SS "int sprint_realloc_object_identifier (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, const \fBnetsnmp_variable_list\fP *var, const struct \fBenum_list\fP *enums, const char *hint, const char *units)"
 .PP
 Prints an object identifier into a buffer. If allow_realloc is true the buffer will be (re)allocated to fit in the needed size. (Note: *buf may change due to this.)
@@ -1127,7 +1127,7 @@ Prints an object identifier into a buffer. If allow_realloc is true the buffer w
 .PP
 
 .PP
-Definition at line 1060 of file mib.c.
+Definition at line 1053 of file mib.c.
 .SS "int sprint_realloc_octet_string (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, const \fBnetsnmp_variable_list\fP *var, const struct \fBenum_list\fP *enums, const char *hint, const char *units)"
 .PP
 Prints an octet string into a buffer. The variable var is encoded as octet string.
@@ -1191,7 +1191,7 @@ Prints an object identifier into a buffer. If allow_realloc is true the buffer w
 .PP
 
 .PP
-Definition at line 970 of file mib.c.
+Definition at line 963 of file mib.c.
 .SS "int sprint_realloc_timeticks (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, const \fBnetsnmp_variable_list\fP *var, const struct \fBenum_list\fP *enums, const char *hint, const char *units)"
 .PP
 Prints a timetick variable into a buffer. If allow_realloc is true the buffer will be (re)allocated to fit in the needed size. (Note: *buf may change due to this.)
@@ -1222,7 +1222,7 @@ Prints a timetick variable into a buffer. If allow_realloc is true the buffer wi
 .PP
 
 .PP
-Definition at line 1130 of file mib.c.
+Definition at line 1123 of file mib.c.
 .SS "int sprint_realloc_uinteger (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, const \fBnetsnmp_variable_list\fP *var, const struct \fBenum_list\fP *enums, const char *hint, const char *units)"
 .PP
 Prints an unsigned integer into a buffer. If allow_realloc is true the buffer will be (re)allocated to fit in the needed size. (Note: *buf may change due to this.)
@@ -1253,7 +1253,7 @@ Prints an unsigned integer into a buffer. If allow_realloc is true the buffer wi
 .PP
 
 .PP
-Definition at line 1381 of file mib.c.
+Definition at line 1374 of file mib.c.
 .SS "char* uptime_string (u_longtimeticks, char *buf)"
 .PP
 Converts timeticks to hours, minutes, seconds string. CMU compatible does not show centiseconds.
@@ -1277,7 +1277,7 @@ uptimeString
 .PP
 
 .PP
-Definition at line 5972 of file mib.c.
+Definition at line 5961 of file mib.c.
 .SH "Variable Documentation"
 .PP 
 .SS "\fBPrefixList\fP mib_prefixes[]"\fBInitial value:\fP
