--- a/man/netsnmp_netsnmp_agent_request_info_s.3
+++ b/man/netsnmp_netsnmp_agent_request_info_s.3
@@ -1,4 +1,4 @@
-.TH "netsnmp_agent_request_info_s" 3 "Fri Mar 18 2011" "Version 5.5.1" "net-snmp" \" -*- nroff -*-
+.TH "netsnmp_agent_request_info_s" 3 "Mon May 7 2012" "Version 5.5.2.rc1" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
