--- a/man/netsnmp_oid_stash.3
+++ b/man/netsnmp_oid_stash.3
@@ -1,4 +1,4 @@
-.TH "Store and retrieve data referenced by an OID." 3 "Fri Mar 18 2011" "Version 5.5.1" "net-snmp" \" -*- nroff -*-
+.TH "Store and retrieve data referenced by an OID." 3 "Mon May 7 2012" "Version 5.5.2.rc1" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
