--- a/man/netsnmp_old_api.3
+++ b/man/netsnmp_old_api.3
@@ -1,4 +1,4 @@
-.TH "old_api" 3 "Fri Mar 18 2011" "Version 5.5.1" "net-snmp" \" -*- nroff -*-
+.TH "old_api" 3 "Mon May 7 2012" "Version 5.5.2.rc1" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -42,12 +42,12 @@ Definition at line 38 of file old_api.c.
 .PP
 implements the old_api handler 
 .PP
-Definition at line 231 of file old_api.c.
+Definition at line 235 of file old_api.c.
 .SS "int netsnmp_register_mib_table_row (const char *moduleName, struct \fBvariable\fP *var, size_tvarsize, size_tnumvars, oid *mibloc, size_tmibloclen, intpriority, intvar_subid, \fBnetsnmp_session\fP *ss, const char *context, inttimeout, intflags)"
 .PP
 registers a row within a mib table 
 .PP
-Definition at line 112 of file old_api.c.
+Definition at line 116 of file old_api.c.
 .SS "int netsnmp_register_old_api (const char *moduleName, struct \fBvariable\fP *var, size_tvarsize, size_tnumvars, oid *mibloc, size_tmibloclen, intpriority, intrange_subid, oidrange_ubound, \fBnetsnmp_session\fP *ss, const char *context, inttimeout, intflags)"
 .PP
 Registers an old API set into the mib tree. Functionally this mimics the old register_mib_context() function (and in fact the new register_mib_context() function merely calls this new old_api one). 
