--- a/man/netsnmp_table_dataset.3
+++ b/man/netsnmp_table_dataset.3
@@ -1,4 +1,4 @@
-.TH "table_dataset" 3 "Fri Mar 18 2011" "Version 5.5.1" "net-snmp" \" -*- nroff -*-
+.TH "table_dataset" 3 "Mon May 7 2012" "Version 5.5.2.rc1" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -115,7 +115,7 @@ Helps you implement a table with automatted storage.
 .br
 .RI "\fImarks a given column in a row as writable or not. \fP"
 .ti -1c
-.RI "int \fBnetsnmp_set_row_column\fP (\fBnetsnmp_table_row\fP *row, unsigned int column, int type, const char *value, size_t value_len)"
+.RI "int \fBnetsnmp_set_row_column\fP (\fBnetsnmp_table_row\fP *row, unsigned int column, int type, const void *value, size_t value_len)"
 .br
 .RI "\fIsets a given column in a row with data given a type, value, and length. \fP"
 .ti -1c
@@ -168,7 +168,7 @@ marks a given column in a row as writable or not.
 .in +1c
 \fBdata_set.c\fP.
 .PP
-Definition at line 1215 of file table_dataset.c.
+Definition at line 1217 of file table_dataset.c.
 .SS "void netsnmp_register_auto_data_table (\fBnetsnmp_table_data_set\fP *table_set, char *registration_name)"
 .PP
 registers a table_dataset so that the 'add_row' snmpd.conf token can be used to add data to this table. If registration_name is NULL then the name used when the table was created will be used instead.
@@ -194,7 +194,7 @@ register a given data_set at a given oid (specified in the netsnmp_handler_regis
 \fBdata_set.c\fP.
 .PP
 Definition at line 389 of file table_dataset.c.
-.SS "int netsnmp_set_row_column (\fBnetsnmp_table_row\fP *row, unsigned intcolumn, inttype, const char *value, size_tvalue_len)"
+.SS "int netsnmp_set_row_column (\fBnetsnmp_table_row\fP *row, unsigned intcolumn, inttype, const void *value, size_tvalue_len)"
 .PP
 sets a given column in a row with data given a type, value, and length. Data is memdup'ed by the function. 
 .PP
@@ -202,7 +202,7 @@ sets a given column in a row with data given a type, value, and length. Data is 
 .in +1c
 \fBdata_set.c\fP.
 .PP
-Definition at line 1250 of file table_dataset.c.
+Definition at line 1252 of file table_dataset.c.
 .SS "\fBnetsnmp_table_row\fP* netsnmp_table_data_set_clone_row (\fBnetsnmp_table_row\fP *row)"
 .PP
 clones a dataset row, including all data. 
@@ -217,17 +217,17 @@ Definition at line 244 of file table_dataset.c.
 .PP
 Finds a column within a given storage set, given the pointer to the start of the storage set list. 
 .PP
-Definition at line 1203 of file table_dataset.c.
+Definition at line 1205 of file table_dataset.c.
 .SS "\fBnetsnmp_table_row\fP* netsnmp_table_data_set_get_first_row (\fBnetsnmp_table_data_set\fP *table)"
 .PP
 returns the first row in the table 
 .PP
-Definition at line 1172 of file table_dataset.c.
+Definition at line 1174 of file table_dataset.c.
 .SS "\fBnetsnmp_table_row\fP* netsnmp_table_data_set_get_next_row (\fBnetsnmp_table_data_set\fP *table, \fBnetsnmp_table_row\fP *row)"
 .PP
 returns the next row in the table 
 .PP
-Definition at line 1179 of file table_dataset.c.
+Definition at line 1181 of file table_dataset.c.
 .SS "void netsnmp_table_dataset_add_index (\fBnetsnmp_table_data_set\fP *table, u_chartype)"
 .PP
 adds an index to the table. Call this repeatly for each index. 
@@ -236,7 +236,7 @@ adds an index to the table. Call this repeatly for each index.
 .in +1c
 \fBdata_set.c\fP.
 .PP
-Definition at line 1304 of file table_dataset.c.
+Definition at line 1306 of file table_dataset.c.
 .SS "NETSNMP_INLINE void netsnmp_table_dataset_add_row (\fBnetsnmp_table_data_set\fP *table, \fBnetsnmp_table_row\fP *row)"
 .PP
 adds a new row to a dataset table 
@@ -287,7 +287,7 @@ Definition at line 270 of file table_dataset.c.
 .PP
 adds multiple indexes to a table_dataset helper object. To end the list, use a 0 after the list of ASN index types. 
 .PP
-Definition at line 1314 of file table_dataset.c.
+Definition at line 1316 of file table_dataset.c.
 .SS "void netsnmp_table_set_multi_add_default_row (\fBnetsnmp_table_data_set\fP *tset, ...)"
 .PP
 adds multiple data column definitions to each row. Functionally, this is a wrapper around calling netsnmp_table_set_add_default_row repeatedly for you. 
